# codex-mcp

./: LICENSE  README.md  pyproject.toml
src/codex_mcp_server/: __init__.py  codex.py  server.py
